7024475: loop doesn't terminate when compiled

Reviewed-by: kvn